--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         ],
         "docs:generate": "composer exec \"docker run --rm -v \"$(pwd):/data\" \"phpdoc/phpdoc:3\" --setting graphs.enabled=true\"",
         "lint": "phpcs",
-        "lint-fix": "phpcbf"
+        "lint-fix": "phpcbf",
+        "test": "phpunit"
     }
 }
