ci: remove windows containers from list
Windows containers do not include pdo-mysql.

Signed-off-by: Eric Fortmeyer <e.fortmeyer01@gmail.com>

--- a/.github/workflows/os-build-check.yml
+++ b/.github/workflows/os-build-check.yml
@@ -11,8 +11,8 @@ jobs:
           [
             'ubuntu-24.04',
             'ubuntu-22.04',
-            'windows-2025',
-            'windows-2022',
+            # 'windows-2025', pdo-mysql does not exist
+            # 'windows-2022', pdo-mysql does not exist
             'macos-15',
             'macos-15-intel',
             'macos-14',
