--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,12 +15,12 @@ repos:
   repo: https://github.com/commitizen-tools/commitizen
   rev: v4.10.0
 - hooks:
-  - exclude: (tests\/__data-providers__)
+  - exclude: (tests\/__classes__)
     id: php-lint
   - args:
-    - --standard=PSR1,PSR12,./phpcs.xml
+    - --standard=PSR12,./phpcs.xml
     - -p
-    exclude: (examples|test|\.phan)
+    exclude: (\.phan)
     files: \.(php)$
     id: php-cs
   repo: https://github.com/digitalpulp/pre-commit-php.git
