--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         ],
         "ci:generate-coverage-badge": [
             "@test --configuration=phpunit.ci.xml",
-            "composer exec \"php-coveralls -v\""
+            "php-coveralls -v"
         ],
         "acceptance-report-format": "sed -i -E -e '1i # Acceptance Test Report\\n' -e 's/^(\\S)/## \\1/' -e 's/^(## .*)$/\\1\\n/' -e 's/^ \\[/- [/' -e '$d' acceptance-test-results.md",
         "test:acceptance": "@test --configuration=phpunit.xml --testsuite acceptance",
@@ -49,7 +49,7 @@
             "@test:acceptance --testdox-text acceptance-test-results.md",
             "@acceptance-report-format"
         ],
-        "docs:generate": "composer exec \"docker run --rm -v \"$(pwd):/data\" \"phpdoc/phpdoc:3\" --setting graphs.enabled=true\"",
+        "docs:generate": "docker run --rm -v $(pwd):/data phpdoc/phpdoc:3 --setting graphs.enabled=true",
         "lint": "phpcs",
         "lint-fix": "phpcbf",
         "test": "phpunit"
